--- a/views/books/new.pug
+++ b/views/books/new.pug
@@ -7,7 +7,6 @@ block content
   div(ng-app='bookApp')
     form.form-horizontal(method='POST', action='/new', ng-controller='BookController')
       input(type='hidden', name='_csrf', value=_csrf)
-      input(type='text', style='display: none')
       .form-group
         label.col-sm-3.control-label(for='Title') Title
         .col-sm-5
@@ -25,15 +24,6 @@ block content
         label.col-sm-3.control-label(for='Description') Description
         .col-sm-7
           textarea.form-control(type='owner_description', name='owner_description', id='owner_description', placeholder='Description', required)
-      .form-group(ng-if='books.length')
-        label.col-sm-3.control-label(for='Trade') Do you want to put this book up for trade?
-        .col-sm-6
-          label.radio.col-sm-3
-            input(type='radio', name='tradestatus', value='1', data-toggle='radio')
-            span Yes
-          label.radio.col-sm-3
-            input(type='radio', name='tradestatus', value='0', data-toggle='radio')
-            span No
         input.form-control(type='hidden', name='imageURL', id='imageURL', value='{{bk.volumeInfo.imageLinks.thumbnail}}')
         input.form-control(type='hidden', name='description', id='description', value='{{bk.volumeInfo.description}}')
         input.form-control(type='hidden', name='rating', id='rating', value='{{bk.volumeInfo.averageRating}}')
@@ -42,3 +32,6 @@ block content
           button.btn.btn-success(type='submit')
             i.fa.fa-user-plus
             | Add
+block scripts
+  script.
+    const sender=null
