--- a/views/layout.pug
+++ b/views/layout.pug
@@ -11,7 +11,7 @@ html
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:300')
     link(rel='stylesheet', href='/css/main.css')
     block links
-  body
+  body(ng-app='bookApp')
     include partials/header
 
     .container
@@ -24,3 +24,4 @@ html
     script(src='/js/lib/jquery-3.1.1.min.js')
     script(src='/js/lib/bootstrap.min.js')
     script(src='/js/main.js')
+    block scripts
