--- a/views/trades/detail.pug
+++ b/views/trades/detail.pug
@@ -5,42 +5,55 @@ block content
     if isSender
       .col-md-1
         h2 Your
-        h2(style='font-weight: bold')
-          | #{trade.offer.title}
+        h2
+          b #{trade.offer.title}
         p.lead #{trade.offer.author}
       .col-md-2
         img(src=trade.offer.imageURL)
       .col-md-6
-        h2 In exchange for
         #trade-menu.text-center
-          h2 Trade options
-          i.fa.fa-check-circle-o.fa-4x(aria-hidden='true', style='color: green')
-          i.fa.fa-times-circle-o.fa-4x(aria-hidden='true', style='color: red')
+          if trade.sender_status
+            h2 You have accepted the trade
+            p.lead Waiting on #{trade.receiver.profile.full_name} to accept the trade
+            i.fa.fa-check-circle-o.fa-5x.green(aria-hidden='true')
+            i.fa.fa-spinner.fa-5x.gray(aria-hidden='true')
+          else
+            h2 Are you sure you would like to trade?
+            i.fa.fa-check-circle-o.fa-4x.green.clickable(aria-hidden='true')
+            i.fa.fa-times-circle-o.fa-4x.red.clickable(aria-hidden='true')
+        button.btn.btn-danger.center-block(type='submit', onclick="location.href='/trade/cancel/" + trade._id + "'") Cancel trade
       .col-md-2
         img(src=trade.book.imageURL)
       .col-md-1
-        h2 #{trade.sender.profile.full_name}'s
-        h2(style='font-weight: bold')
-          | #{trade.book.title}
+        h2 #{trade.receiver.profile.full_name}'s
+        h2
+          b #{trade.book.title}
         p.lead #{trade.book.author}
     else
       .col-md-1
         h2 Your
-        h2(style='font-weight: bold')
-          | #{trade.book.title}
+        h2
+          b #{trade.book.title}
         p.lead #{trade.book.author}
       .col-md-2 
         img(src=trade.book.imageURL)
       .col-md-6
-        h2 In exchange for
         #trade-menu.text-center
-          h2 Trade options
-          i.fa.fa-check-circle-o.fa-4x(aria-hidden='true', style='color: green')
-          i.fa.fa-times-circle-o.fa-4x(aria-hidden='true', style='color: red')
+          if trade.receiver_status
+            h2 You have accepted the trade
+            p.lead Waiting on #{trade.receiver.profile.full_name} to accept the trade
+            i.fa.fa-check-circle-o.fa-5x.green(aria-hidden='true')
+            i.fa.fa-spinner.fa-5x.gray(aria-hidden='true')
+          else
+            h2 #{trade.sender.profile.full_name} has sent you a trade
+            p.lead Do you wish to accept the trade?
+            a(href='/trade/accept/' + trade._id) 
+              i.fa.fa-check-circle-o.fa-4x.green(aria-hidden='true')
+            i.fa.fa-times-circle-o.fa-4x.red.clickable.decline(aria-hidden='true')
       .col-md-2
         img(src=trade.offer.imageURL)
       .col-md-1
         h2 #{trade.sender.profile.full_name}'s
-        h2(style='font-weight: bold')
-          | #{trade.offer.title}
+        h2
+          b #{trade.offer.title}
         p.lead #{trade.offer.author}
