--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -30,6 +30,22 @@ footer {
   }
 }
 
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
+}
+
+.gray {
+  color: lightgray;
+}
+
+.clickable {
+  cursor: pointer;
+}
+
 // Title
 // -------------------------
 h1 {
@@ -124,12 +140,33 @@ textarea {
 // -----------------------
 #trade-menu {
   border: 1px solid rgba(0,0,0,0.2);
-  margin-top: 5%;
+  margin-bottom: 20px;
   i {
     padding: 10px;
   }
 }
-
 #trade-container {
-  margin-top: 10%;
+  margin-top: 15%;
+}
+
+// Trade view
+// -----------------------
+.trade-list {
+  .trade {
+    border: 1px solid rgba(0,0,0,0.2);
+    margin: 20px 0px;
+    li {
+      list-style: none;
+      margin: 2% 5%;
+    }
+    > :nth-child(1) {
+      float: left;
+    }
+    > :nth-child(2) {
+      float: right;
+    }
+    img {
+      width: 50px;
+    }
+  }
 }
