--- a/views/partials/flash.pug
+++ b/views/partials/flash.pug
@@ -10,3 +10,9 @@ if messages.info
       i.fa.fa-times-circle-o
     for info in messages.info
       div= info.msg
+if messages.success
+  .alert.alert-success.fade.in
+    button.close(type='button', data-dismiss='alert')
+      i.fa.fa-times-circle-o
+    for success in messages.success
+      div= success.msg
