--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -7,7 +7,8 @@ block content
     .col-md-6.col-md-offset-1
       h1 #{user.profile.full_name}
       p.lead #{user.profile.location.city}, #{user.profile.location.state}
-  h3(style='font-weight: bold') Books owned
+  h3
+    b Books owned
   #book-list
     each book in user.books
       .book.col-md-2
