--- a/views/books/view.pug
+++ b/views/books/view.pug
@@ -19,7 +19,7 @@ block content
             p #{book.author}
             img(src=book.imageURL)
   else
-    p No books found :<
+    h4 No books found :<
     .col-md-4.col-md-offset-4.text-center
       a(href='/new' class='add-book') 
         i.fa.fa-plus-circle.fa-5x(aria-hidden='true')
