--- a/views/users/profile.pug
+++ b/views/users/profile.pug
@@ -3,14 +3,14 @@ extends ../layout
 block content
   .page-header.row
     .pull-left.col-md-2
-      img(style='width: 200px' src=user.profile.picture)
+      img(style='width: 200px' src=profile.profile.picture)
     .col-md-6.col-md-offset-1
-      h1 #{user.profile.full_name}
-      p.lead #{user.profile.location.city}, #{user.profile.location.state}
+      h1 #{profile.profile.full_name}
+      p.lead #{profile.profile.location.city}, #{profile.profile.location.state}
   h3
     b Books owned
   #book-list
-    each book in user.books
+    each book in profile.books
       .book.col-md-2
         a(href='/book/' + book._id)
           h4 #{book.title}
