Form and front end bug fixes

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,10 +1,9 @@
 body {
-  background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url("/img/homebg.jpg") no-repeat center center fixed;
+  background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.8)), url("/img/homebg.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: left top;
   overflow-y: hidden; }
@@ -25,5 +24,5 @@ body {
   text-align: left; }
 
 .main-description i {
-  color: gray;
+  color: #d83c30;
   margin: 20px; }
