--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -97,6 +97,9 @@ textarea {
 #book-list {
   display: flex;
   flex-wrap: wrap;
+  img {
+    padding: 5%;
+  }
   .book {
     cursor: pointer;
     margin: 2.5% 0%;
