--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -1,13 +1,12 @@
 body {
     background: linear-gradient(
-    rgba(255, 255, 255, 0.70), 
-    rgba(255, 255, 255, 0.70)
+    rgba(255, 255, 255, 0.90), 
+    rgba(255, 255, 255, 0.80)
   ), url('/img/homebg.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: left top;
   overflow-y:hidden;
@@ -32,7 +31,7 @@ body {
     text-align: left;
   }
   i {
-    color: gray;
+    color: #d83c30;
     margin: 20px;
   }
 }
