--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -12,8 +12,8 @@
       ul.nav.navbar-nav
         li(class=(title == 'Home') ? 'active' : undefined)
           a(href='/') Home
-        li(class=(title == 'View') ? 'active' : undefined)
-          a(href='/view') View
+        li(class=(title == 'Dashboard') ? 'active' : undefined)
+          a(href='/view') Dashboard
       ul.nav.navbar-nav.navbar-right
         if !user
           li(class=(title == 'Login') ? 'active' : undefined)
