--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -141,15 +141,22 @@ textarea {
 
 // Trade menu
 // -----------------------
+#trade-container {
+  margin-top: 10%;
+}
 #trade-menu {
   border: 1px solid rgba(0,0,0,0.2);
   margin-bottom: 20px;
+  margin-top: 10%;
   i {
     padding: 10px;
   }
-}
-#trade-container {
-  margin-top: 15%;
+  .trade-message {
+    background: rgba(0,0,0,0.05);
+    width: 50%;
+    position: relative;
+    left: 25%;
+  }
 }
 
 // Trade view
@@ -157,16 +164,10 @@ textarea {
 .trade-list {
   .trade {
     border: 1px solid rgba(0,0,0,0.2);
-    margin: 20px 0px;
-    li {
-      list-style: none;
-      margin: 2% 5%;
-    }
-    > :nth-child(1) {
-      float: left;
-    }
-    > :nth-child(2) {
-      float: right;
+    padding: 10px 5px;
+    i {
+      color: #d83c30;
+      margin-top: 20%;
     }
     img {
       width: 50px;
