--- a/views/trades/request.pug
+++ b/views/trades/request.pug
@@ -17,7 +17,7 @@ block content
       #book-list
         .col-md-2.book(ng-repeat='book in books', ng-click='updateBookId(book, $index)')
           img(ng-src='{{book.imageURL}}', ng-class="{'book-selected': $index == selectedIndex}")
-        input.form-control(name='bookid', id='bookid', ng-model='bookId', value='{{bookId}}', required)
+        input.form-control(type='hidden', name='bookid', id='bookid', ng-model='bookId', value='{{bookId}}', required)
       .form-group
       label.col-sm-3.control-label(for='Message') Message
       .col-sm-7
